objects/VisitOps__Visit__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Off_Site_Time_Zone__c</fullName>
        <label>Off-Site Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT+14:00) Line Islands Time (Pacific/Kiritimati)</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Phoenix Islands Time (Pacific/Enderbury)</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Magadan Time (Asia/Kamchatka)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Fiji Time (Pacific/Fiji)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:30) Norfolk Islands Time (Pacific/Norfolk)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Solomon Islands Time (Pacific/Guadalcanal)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:30) Lord Howe Standard Time (Australia/Lord_Howe)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time (Australia/Brisbane)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time (Australia/Sydney)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australian Central Standard Time (Australia/Adelaide)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australian Central Standard Time (Australia/Darwin)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Korean Standard Time (Asia/Seoul)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Philippine Time (Asia/Manila)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) China Standard Time (Asia/Shanghai)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Singapore Standard Time (Asia/Singapore)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Taipei Standard Time (Asia/Taipei)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time (Asia/Bangkok)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time (Asia/Ho_Chi_Minh)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Western Indonesia Time (Asia/Jakarta)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:30) Myanmar Time (Asia/Rangoon)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Bangladesh Time (Asia/Dhaka)</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:45) Nepal Time (Asia/Kathmandu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:30) India Standard Time (Asia/Colombo)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__OurRelationshipWithAccounts__c</fullName>
        <description>This field is appliable for Type = Customer visit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Our Relationship with Accounts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Owner_Portal__c</fullName>
        <description>Name for Portal Owner</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner (Portal)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Owner_PostSurveySent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner PostSurveySent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Owner_PostSurvey_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner PostSurvey Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Owner_PostSurvey_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner PostSurvey Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Owner_PostSurvey_Status__c</fullName>
        <formula>IF( VisitOps__Owner_PostSurvey_Received__c ,&apos;Recieved&apos;,IF(VisitOps__Owner_PostSurveySent__c ,&apos;Sent&apos;,IF( VisitOps__Owner_PostSurvey_Required__c ,&apos;Scheduled&apos;,&apos;Not Scheduled&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner PostSurvey Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Owner_PreSurveySent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner PreSurveySent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Owner_PreSurvey_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner PreSurvey Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Owner_PreSurvey_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner PreSurvey Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Owner_PreSurvey_Status__c</fullName>
        <formula>IF(VisitOps__Owner_PreSurvey_Received__c ,&apos;Recieved&apos;,IF(VisitOps__Owner_PreSurveySent__c ,&apos;Sent&apos;,IF( VisitOps__Owner_PreSurvey_Required__c  ,&apos;Scheduled&apos;,&apos;Not Scheduled&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner PreSurvey Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Photographer_Status__c</fullName>
        <label>Photographer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Photographer requestsed</fullName>
                </value>
                <value>
                    <fullName>Photographer confirmed</fullName>
                </value>
                <value>
                    <fullName>Photographer not needed</fullName>
                </value>
                <value>
                    <fullName>Photographer issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Portal_User_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__Portal_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Post_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Post_Survey_Status__c</fullName>
        <label>Post-Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post-surveys needed / not sent</fullName>
                </value>
                <value>
                    <fullName>Post-surveys sent to attendees</fullName>
                </value>
                <value>
                    <fullName>Post-surveys distributed</fullName>
                </value>
                <value>
                    <fullName>Post-surveys not needed</fullName>
                </value>
                <value>
                    <fullName>Post-survey issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Post_Visit_Survey_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, you will receive an email immediately after the visit asking which attendees should receive the post-visit survey</inlineHelpText>
        <label>Post-Visit Survey Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Pre_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Pre_Survey_Status__c</fullName>
        <label>Pre-Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-surveys needed / not sent</fullName>
                </value>
                <value>
                    <fullName>Pre-surveys sent</fullName>
                </value>
                <value>
                    <fullName>Pre-surveys distributed to presenters</fullName>
                </value>
                <value>
                    <fullName>Pre-surveys not needed</fullName>
                </value>
                <value>
                    <fullName>Pre-survey issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Pre_Visit_Survey_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, you will receive an email prior to the visit asking which attendees should receive the pre-visit survey.</inlineHelpText>
        <label>Pre-Visit Survey Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__PriorLocation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Prior_Location_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior Location Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__Prior_Room__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Program_Name_Formula__c</fullName>
        <formula>VisitOps__Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>VisitOps__Program__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__ReasonForCancellation__c</fullName>
        <description>This field is appliable for Status = Cancelled</description>
        <label>Reason for Cancellation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal issue with customer</fullName>
                </value>
                <value>
                    <fullName>Primary decision maker unavailable</fullName>
                </value>
                <value>
                    <fullName>Conflict with date</fullName>
                </value>
                <value>
                    <fullName>Weather / Travel issues</fullName>
                </value>
                <value>
                    <fullName>Decision already made</fullName>
                </value>
                <value>
                    <fullName>Presenters unavailable at our location</fullName>
                </value>
                <value>
                    <fullName>Location over capacity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__ReasonForYourVisit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What do you expect from this visit</inlineHelpText>
        <label>Reason for your Visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Restaurant_Status__c</fullName>
        <label>Restaurant Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant needed / not arranged</fullName>
                </value>
                <value>
                    <fullName>Restaurant arranged</fullName>
                </value>
                <value>
                    <fullName>Restaurant not needed</fullName>
                </value>
                <value>
                    <fullName>Restaurant issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Visit Team to Assign</inlineHelpText>
        <label>Room</label>
        <referenceTo>VisitOps__Room__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__SearchVisitFromDate__c</fullName>
        <description>This is created for programatic purpose only</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SearchVisitFromDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__SearchVisitToDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SearchVisitToDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Security_Status__c</fullName>
        <label>Security Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Security needed / not arranged</fullName>
                </value>
                <value>
                    <fullName>Security services requested</fullName>
                </value>
                <value>
                    <fullName>Security arranged</fullName>
                </value>
                <value>
                    <fullName>Security not needed</fullName>
                </value>
                <value>
                    <fullName>Security issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Send_OwnerPostSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send OwnerPostSurvey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Send_OwnerPreSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send OwnerPreSurvey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Send_Survey_to_Visit_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Survey to Visit Owner</description>
        <label>Send Survey to Visit Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Signage_Status__c</fullName>
        <label>Signage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signage needed / not arranged</fullName>
                </value>
                <value>
                    <fullName>Signage requested</fullName>
                </value>
                <value>
                    <fullName>Signage confirmed</fullName>
                </value>
                <value>
                    <fullName>Signage In Production</fullName>
                </value>
                <value>
                    <fullName>Signage not needed</fullName>
                </value>
                <value>
                    <fullName>Signage issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Start_Time__c</fullName>
        <description>New Date Type Field for Calendar Page</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Status_Bar_Picklist__c</fullName>
        <description>Used for Status Progress bar on Visit Detail Page</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>During Visit</fullName>
                </value>
                <value>
                    <fullName>Post Visit</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <isActive>false</isActive>
                    <label>On Hold</label>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                    <isActive>false</isActive>
                    <label>Unavailable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Status_PostVist_Time_Indicator__c</fullName>
        <formula>VisitOps__DepartureDateTime__c -  0.04145</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status PostVist Time Indicator</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Strategy_Call_Status__c</fullName>
        <label>Strategy Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategy Call Scheduled</fullName>
                </value>
                <value>
                    <fullName>Strategy Call Complete</fullName>
                </value>
                <value>
                    <fullName>Strategy Call Not Needed</fullName>
                </value>
                <value>
                    <fullName>Strategy Call Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Stutus_During_Vist_Time_Indicator__c</fullName>
        <formula>VisitOps__ArrivalDateTime__c -  0.04145</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status During Vist Time Indicator</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__SubmitVisitFor__c</fullName>
        <inlineHelpText>This determines which approval process is invoked upon click of &quot;Submit for Approval&quot; button in &quot;Approval History&quot;  Related List for CV1 visit type visit.</inlineHelpText>
        <label>Submit Visit For</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leadership Approval</fullName>
                </value>
                <value>
                    <fullName>Agenda Approval</fullName>
                    <default>true</default>
                    <label>Agenda Approval</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Submitted_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__TopicsAndPeopleNeeded__c</fullName>
        <description>This field is appliable for Type = Customer visit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Topics and People Needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__TotalNoOfAttendees__c</fullName>
        <label>Total # of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__VO_Location_Name_Formula__c</fullName>
        <formula>VisitOps__Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Videographer_Status__c</fullName>
        <label>Videographer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Videographer requested</fullName>
                </value>
                <value>
                    <fullName>Videographer confirmed</fullName>
                </value>
                <value>
                    <fullName>Videographer not needed</fullName>
                </value>
                <value>
                    <fullName>Videographer issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__VisitCoordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VisitCoordinatorVisits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitManagerEmail__c</fullName>
        <description>This field will have the Email of the manager of Visit and is based on &apos;Owner&apos; of the Visit record.</description>
        <formula>IF( ISBLANK( Owner:User.LastName ) ,  Owner:Queue.QueueEmail ,  Owner:User.Email )</formula>
        <label>Visit Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitManagerName__c</fullName>
        <description>This field will have the name of the manager of Visit and is based on &apos;Owner&apos; of the Visit record.</description>
        <formula>IF(   ISBLANK(Owner:User.LastName) ,  Owner:Queue.QueueName ,  Owner:User.FirstName + &apos; &apos;+ Owner:User.LastName)</formula>
        <label>Visit Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitManagerPhoneNo__c</fullName>
        <formula>IF(   ISBLANK(Owner:User.LastName) ,&apos;&apos; , Owner:User.Phone )</formula>
        <label>Visit Manager Phone No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is no longer used and standard owner field serves this purpose</description>
        <label>Visit Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VisitManagerVisits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitNumber__c</fullName>
        <description>This field is used in reports for identifying Visit on Visit Number and doesnt have any use or significance anywhere else.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VisitsAsOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitStatusName__c</fullName>
        <formula>VisitOps__VisitStatus__r.Name</formula>
        <label>Visit Status Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Status object which contains static data set for all Status applicable for a Visit</description>
        <label>Status</label>
        <referenceTo>VisitOps__Status__c</referenceTo>
        <relationshipLabel>Visits with this Status</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitTeamAgendaComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Team Agenda Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitTeamComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Team Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitTypeCategoryFormula__c</fullName>
        <formula>TEXT(VisitOps__VisitType__r.VisitOps__Category__c)</formula>
        <label>Visit Type Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The visit type applicable for this visit</description>
        <label>Visit Type</label>
        <referenceTo>VisitOps__VisitType__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Visit Control</description>
        <inlineHelpText>Visit Control</inlineHelpText>
        <label>Visit Control</label>
        <referenceTo>VisitOps__Visit_Control__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Logistics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Visit Logistics</description>
        <inlineHelpText>Visit Logistics</inlineHelpText>
        <label>Visit Logistics</label>
        <referenceTo>VisitOps__Visit_Logistics__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Owner_Email__c</fullName>
        <formula>VisitOps__VisitOwner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Owner_Survey_Language_New__c</fullName>
        <label>Visit Owner Survey Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VisitOps__Survey_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Owner_Survey_Language__c</fullName>
        <label>Visit Owner Survey Language (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>zh_CN</fullName>
                    <label>Chinese (Simplified)</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>ja</fullName>
                    <label>Japanese</label>
                </value>
                <value>
                    <fullName>pl</fullName>
                    <label>Polish</label>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                    <label>Portuguese</label>
                </value>
                <value>
                    <fullName>es</fullName>
                    <label>Spanish</label>
                </value>
                <value>
                    <fullName>de_DE</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>en_US</fullName>
                    <label>English</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Package__c</fullName>
        <formula>HYPERLINK($Label.visitops__visitops_site_url+&apos;/&apos;+$Label.visitops__visit_package_pagename+&apos;?id=&apos;&amp;Id ,$Label.visitops__visitops_site_url+&apos;/&apos;+$Label.visitops__visit_package_pagename+&apos;?id=&apos;&amp;Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Team_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Team Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Team_Post_Visit_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Team Post Visit Comments</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Type_Formula__c</fullName>
        <formula>VisitOps__VisitType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VisitType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Vist_Status_Place_HolderText__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vist Status Place Holder</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Vist_Status_Place_Holder_PostVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vist Status Place Holder PostVisit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Vist_Status_Place_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vist Status Place Holder During Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__WhatElseDoWeNeedToKnow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>What else do we need to know?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__VisitName__c</columns>
        <columns>VisitOps__ArrivalDateTime__c</columns>
        <columns>VisitOps__DepartureDateTime__c</columns>
        <columns>VisitOps__VisitStatusName__c</columns>
        <columns>VisitOps__Location__c</columns>
        <columns>VisitOps__VisitType__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V{0000}</displayFormat>
        <label>Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>VisitOps__CreatorAccessAfterSubmit__c</fullName>
        <label>Creator Access After Submit</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>VisitOps__Creator__c</fullName>
        <label>Creator</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>VisitOps__PresenterAccess__c</fullName>
        <label>PresenterAccess</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>VisitOps__VisitOwnerAccessAfterCreate__c</fullName>
        <label>VisitOwner Access After Create</label>
    </sharingReasons>
</CustomObject>